*iio-sensor-proxy-1.1 (14 Oct 2015)

  14 Oct 2015; Poncho <poncho@spahan.ch> +iio-sensor-proxy-1.1.ebuild,
  +metadata.xml:
  gnome-extra/iio-sensor-proxy: new ebuild