@@ -1,1 +1,1 @@
-DIST iio-sensor-proxy-1.1.tar.gz 31378 SHA256 5fab22886d344b051651b4429a4edf43c122f38bf28ae9b60f395ac6e988aff1 SHA512 6efd02e8c0bbecf2bb63585701016533a00f50b448b9f5d933282a129a55ac5ef19b4a139fd11c542712dc6c6b30758b59c8a1497dc503394c5a7a07d6bad8bc WHIRLPOOL 903a195a9112fe3afb67e90217b213bdb0f428d92d46c645a0169b7646c01f247ee9053dd749b08ff5a40a53408464584f4cad2b54562f2a96cb112d8fb9ffe9
+DIST iio-sensor-proxy-1.1.tar.xz 117300 SHA256 9f6af224ed1f68b140961cb0045390fcee2f928dbd36efc7df73d61f263ff004 SHA512 a9e62ea659d1dc87c79312b7a931de2b041f41aaf5034ae56aef80609238abfe55e37ce31de761fe49ea0944969730ad69f6be26036ed5b0f67659b8a7009ead WHIRLPOOL 48283b61077bb80e96082705da76190230568b68b808fef8c861ab19cf7a1b1995e73d154b716b900bc2a01d988911b9e63d720b55c9601df08b313142096e85
