@@ -1,3 +1,6 @@
+  14 Oct 2015; Poncho <poncho@spahan.ch> iio-sensor-proxy-1.1.ebuild:
+  gnome-extra/iio-sensor-proxy: use freedesktop SRC_URI
+
 *iio-sensor-proxy-1.1 (14 Oct 2015)
 
   14 Oct 2015; Poncho <poncho@spahan.ch> +iio-sensor-proxy-1.1.ebuild,
